--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@types/node": "16.11.7",
     "@types/react": "17.0.35",
-    "eslint": "7",
-    "eslint-config-next": "12.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "<8.0.0",
+    "eslint-config-next": "^12.0.4",
     "postcss-preset-env": "^7.0.0",
     "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
