--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "bose-management",
+  "name": "next-typescript-tailwind",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.4",
+    "next": "^12.2.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
