--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@types/react": "17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "autoprefixer": "^10.4.8",
     "eslint": "<8.0.0",
     "eslint-config-next": "^12.0.4",
-    "postcss-preset-env": "^7.0.0",
-    "tailwindcss": "^2.2.19",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.4.4"
   }
 }
