--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.2.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
-    "@types/react": "17.0.35",
+    "@types/react": "^18.0.18",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "autoprefixer": "^10.4.8",
     "eslint": "<8.0.0",
-    "eslint-config-next": "^12.0.4",
+    "eslint-config-next": "^12.2.5",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.4.4"
+    "typescript": "^4.8.2"
   }
 }
