--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.1.1",
+    "classnames": "^2.3.2",
+    "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
@@ -21,7 +22,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "autoprefixer": "^10.4.8",
     "eslint": "<8.0.0",
-    "eslint-config-next": "^13.1.1",
+    "eslint-config-next": "^13.1.6",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.2"
